--- a/manifest.yml
+++ b/manifest.yml
@@ -9,8 +9,9 @@ declared-services:
 applications:
 - path: ./app
   name: watson-discovery-news-alerting
+  command: yarn start
   buildpack: sdk-for-nodejs
-  memory: 256MB
+  memory: 512MB
   instances: 1
   random-route: false
   services:
@@ -22,7 +23,7 @@ applications:
   no-route: true
   health-check-type: process
   buildpack: sdk-for-nodejs
-  memory: 256MB
+  memory: 512MB
   instances: 1
   services:
   - wdna-cloudant
