--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,7 @@
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/IBM/watson-discovery-news-alerting.git"
+    "url": "https://github.com/modi975/my_repo.git"
   },
   "dependencies": {
     "@cloudant/cloudant": "^2.3.0",
